--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <section class="conteudo-principal">
+        <img src="tiagu.jpg"> </img>
         <h2 class="titulo-principal">Meus objetivos do ano<span>_</span></h2>
         <div class="conteudo">
             <div class="botoes">
@@ -104,6 +105,7 @@
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="seg3"></p>
                             <p class="contador-digito-texto">seg</p>
+                            
                         </div>
                     </div>
                 </div>
