--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <section class="conteudo-principal">
         <img src="tiagu.jpg"> </img>
-        <h2 class="titulo-principal">Meus objetivos do ano<span>_</span></h2>
+        <h2 class="titulo-principal">Carlinhos<span>_</span></h2>
         <div class="conteudo">
             <div class="botoes">
                 <button class="botao ativo">Cursos na Alura</button>
